# args

./: CMakeLists.txt  README.md
.cmake/modules/: msvc.cmake
src/: args.hpp
tests/: CMakeLists.txt  args.cpp
